--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/node": "^8.3.3",
     "astro": "^4.15.5",
+    "nanostores": "^0.11.3",
+    "socket.io-client": "^4.7.5",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
